first screen high correction

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </header>
         </div>
         <section class="main-content center">
-          <article class="main-content__info verticalAlign highCorrection">
+          <article class="main-content__info verticalAlign">
             <div class="contener1">
               <p class="text1">Get the most fun weather app</p>
               <p class="text2">Simple, nice and user-friendly aplication of the weather. Only useful information</p>
@@ -99,7 +99,7 @@
               </div>
             </div>
           </article>
-          <article class="main-content__phone highCorrection">
+          <article class="main-content__phone">
             <div class="img">
 
             </div>
