images paths and compresion

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           <div class="slider">
             <div class="carousel">
               <a href="#" id="prev" class="carouselButtons prev"><span></span></a>
-              <img src="images/image left.png" id="item-1.png" />
-              <img src="images/image center.png" id="item-2.png" />
-              <img src="images/image right.png" id="item-3.png" />
+              <img src="images/Slider/image left.png" id="item-1.png" />
+              <img src="images/Slider/image center.png" id="item-2.png" />
+              <img src="images/Slider/image right.png" id="item-3.png" />
               <a href="#" id="next" class="carouselButtons next"><span></span></a>
             </div>
           </div>
