--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>UNICEF</title>
+        <title>Weather app</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&amp;subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
