--- a/index.html
+++ b/index.html
@@ -18,15 +18,7 @@
 
       <section id="hamburgerMenu" class="hamburgerMenu ">
         <div id="hamburgerMenu--topHeight" class="center">
-          <a id="hamburgerMenu--btn" class="hamburgerMenu__active--btn"></a>
-          <!-- <a id="hamburgerMenu--btn" class="btn__menu js-btnMenu">
-            <span class="btn__menu__line btn__menu__line--first"></span>
-            <span class="btn__menu__line btn__menu__line--second"></span>
-            <span class="btn__menu__line btn__menu__line--third"></span>
-            <span class="btn__menu__line btn__menu__line--fourth"></span>
-            <span class="btn__menu__line btn__menu__line--fifth"></span>
-            <span class="btn__menu__line btn__menu__line--sixth"></span>
-          </a> -->
+          <!--<button type="button" id="hamburgerMenu[2 myslniki]btn" class="hamburgerMenu__active[2 myslniki]btn"></button>     red hamb button-->
         </div>
         <div class="hamburgerMenu__container">
           <ul id="hamburgerMenuArea">
@@ -78,14 +70,14 @@
                 <a href="http://twitter.com" class="header__social--tweeter">Tweeter</a>
               </li>
             </ul>
-            <a id="hamburgerButton" class="btn__menu js-btnMenu">
+            <button aria-label="menu" type="button" id="hamburgerButton" class="btn__menu js-btnMenu">
               <span class="btn__menu__line btn__menu__line--first"></span>
               <span class="btn__menu__line btn__menu__line--second"></span>
               <span class="btn__menu__line btn__menu__line--third"></span>
               <span class="btn__menu__line btn__menu__line--fourth"></span>
               <span class="btn__menu__line btn__menu__line--fifth"></span>
               <span class="btn__menu__line btn__menu__line--sixth"></span>
-            </a>
+            </button>
           </header>
         </div>
         <section class="main-content center">
