--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-      <section id="hamburgerMenu" class="hamburgerMenu ">
+      <nav id="hamburgerMenu" class="hamburgerMenu ">
         <div id="hamburgerMenu--topHeight" class="center">
           <!--<button type="button" id="hamburgerMenu[2 myslniki]btn" class="hamburgerMenu__active[2 myslniki]btn"></button>     red hamb button-->
         </div>
@@ -36,7 +36,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </nav>
 
       <section id="first-screen" class="first-screen">
         <div class="bg">
@@ -70,7 +70,7 @@
                 <a href="http://twitter.com" class="header__social--tweeter">Tweeter</a>
               </li>
             </ul>
-            <button aria-label="menu" type="button" id="hamburgerButton" class="btn__menu js-btnMenu">
+            <button type="button" id="hamburgerButton" class="btn__menu js-btnMenu">
               <span class="btn__menu__line btn__menu__line--first"></span>
               <span class="btn__menu__line btn__menu__line--second"></span>
               <span class="btn__menu__line btn__menu__line--third"></span>
