--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               </ul>
             </nav>
             <p class="author">
-              Rafał Sebestjański
+              Twórca strony
             </p>
             <ul class="header__social">
               <li>
